--- a/frontend/src/locale/messages.hi.xlf
+++ b/frontend/src/locale/messages.hi.xlf
@@ -859,7 +859,7 @@
       </trans-unit>
       <trans-unit id="b62e50ad8bdbb107a2ec978648faf36e9f91c3c1" datatype="html">
         <source>Payment to mempool.space for acceleration of txid <x id="START_LINK" ctype="x-a" equiv-text="&lt;a [routerLink]=&quot;'/tx/' + tx.txid&quot; target=&quot;_blank&quot;&gt;"/><x id="INTERPOLATION" equiv-text="tr(0, 10) }}"/>..<x id="INTERPOLATION_1" equiv-text="{{ tx.txid.substr(-10) }}"/><x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/p&gt;         &lt;/d"/></source>
-        <target>txid के त्वरण के लिए mempool.space को भुगतान <x id="START_LINK" ctype="x-a" equiv-text="&lt;a [routerLink]=&quot;'/tx/' + tx.txid&quot; target=&quot;_blank&quot;&gt;"/><x id="INTERPOLATION" equiv-text="tr(0, 10) }}"/>..<x id="INTERPOLATION_1" equiv-text="{{ tx.txid.substr(-10) }}"/><x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/p&gt;         &lt;/d"/></target>
+        <target>txid के त्वरण के लिए earthcoin.space को भुगतान <x id="START_LINK" ctype="x-a" equiv-text="&lt;a [routerLink]=&quot;'/tx/' + tx.txid&quot; target=&quot;_blank&quot;&gt;"/><x id="INTERPOLATION" equiv-text="tr(0, 10) }}"/>..<x id="INTERPOLATION_1" equiv-text="{{ tx.txid.substr(-10) }}"/><x id="CLOSE_LINK" ctype="x-a" equiv-text="&lt;/p&gt;         &lt;/d"/></target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/accelerate-checkout/accelerate-checkout.component.html</context>
           <context context-type="linenumber">362,363</context>
@@ -7954,7 +7954,7 @@
       </trans-unit>
       <trans-unit id="999bb1a0150c2815a6b4dd64a1850e763603e525" datatype="html">
         <source><x id="START_PARAGRAPH" ctype="x-p" equiv-text="For any such requ"/><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space mer"/>mempool.space merely provides data about the Bitcoin network.<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> It cannot help you with retrieving funds, wallet issues, etc.<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;/p&gt;"/><x id="START_PARAGRAPH" ctype="x-p" equiv-text="For any such requ"/>For any such requests, you need to get in touch with the entity that helped make the transaction (wallet software, exchange company, etc).<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;/p&gt;"/></source>
-        <target><x id="START_PARAGRAPH" ctype="x-p" equiv-text="For any such requ"/><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space mer"/>mempool.space केवल बिटकॉइन नेटवर्क के बारे में डेटा प्रदान करता है।<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> यह आपको धन प्राप्त करने, वॉलेट समस्याओं आदि में मदद नहीं कर सकता है।<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;/p&gt;"/><x id="START_PARAGRAPH" ctype="x-p" equiv-text="For any such requ"/>ऐसे किसी भी अनुरोध के लिए, आपको उस संस्था से संपर्क करना होगा जिसने लेनदेन में मदद की (वॉलेट सॉफ़्टवेयर, एक्सचेंज कंपनी, आदि)।<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;/p&gt;"/></target>
+        <target><x id="START_PARAGRAPH" ctype="x-p" equiv-text="For any such requ"/><x id="START_BOLD_TEXT" ctype="x-b" equiv-text="mempool.space mer"/>earthcoin.space केवल भूमिकोइन नेटवर्क के बारे में डेटा प्रदान करता है।<x id="CLOSE_BOLD_TEXT" ctype="x-b" equiv-text="&lt;/b&gt;"/> यह आपको धन प्राप्त करने, वॉलेट समस्याओं आदि में मदद नहीं कर सकता है।<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;/p&gt;"/><x id="START_PARAGRAPH" ctype="x-p" equiv-text="For any such requ"/>ऐसे किसी भी अनुरोध के लिए, आपको उस संस्था से संपर्क करना होगा जिसने लेनदेन में मदद की (वॉलेट सॉफ़्टवेयर, एक्सचेंज कंपनी, आदि)।<x id="CLOSE_PARAGRAPH" ctype="x-p" equiv-text="&lt;/p&gt;"/></target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/docs/api-docs/api-docs.component.html</context>
           <context context-type="linenumber">15,16</context>
@@ -8081,7 +8081,7 @@
       </trans-unit>
       <trans-unit id="meta.description.docs.rest-bitcoin" datatype="html">
         <source>Documentation for the mempool.space REST API service: get info on addresses, transactions, blocks, fees, mining, the Lightning network, and more.</source>
-        <target>मेमपूल.स्पेस REST API सेवा के लिए दस्तावेज़ीकरण: पते, लेनदेन, ब्लॉक, शुल्क, खनन, लाइटनिंग नेटवर्क और अधिक के बारे में जानकारी प्राप्त करें।</target>
+        <target>भूमिकोइन.स्पेस REST API सेवा के लिए दस्तावेज़ीकरण: पते, लेनदेन, ब्लॉक, शुल्क, खनन, लाइटनिंग नेटवर्क और अधिक के बारे में जानकारी प्राप्त करें।</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/docs/docs/docs.component.ts</context>
           <context context-type="linenumber">55</context>
@@ -8105,7 +8105,7 @@
       </trans-unit>
       <trans-unit id="meta.description.docs.websocket-bitcoin" datatype="html">
         <source>Documentation for the mempool.space WebSocket API service: get real-time info on blocks, mempools, transactions, addresses, and more.</source>
-        <target>मेमपूल.स्पेस वेबसॉकेट एपीआई सेवा के लिए दस्तावेज़ीकरण: ब्लॉक, मेमपूल, लेनदेन, पते और अधिक पर वास्तविक समय की जानकारी प्राप्त करें।</target>
+        <target>भूमिकोइन.स्पेस वेबसॉकेट एपीआई सेवा के लिए दस्तावेज़ीकरण: ब्लॉक, मेमपूल, लेनदेन, पते और अधिक पर वास्तविक समय की जानकारी प्राप्त करें।</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/docs/docs/docs.component.ts</context>
           <context context-type="linenumber">63</context>
